# rust-ddd-template

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/application/: mod.rs
src/application/dtos/: greeting_dto.rs  mod.rs
src/application/use_cases/: greeting_use_case.rs  mod.rs
src/domain/: mod.rs
src/domain/services/: greeting_service.rs  mod.rs
src/domain/value_objects/: mod.rs  name.rs
src/infrastructure/graphql/: mod.rs  schema.rs
src/interfaces/api/: graphql.rs  mod.rs
