[package]
name = "rust-ddd-template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.88"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.13.1"
